--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/n-c0d3r/n0d3s#readme",
   "dependencies": {
+    "@datastructures-js/queue": "^4.2.3",
+    "fs-extra": "^11.1.1",
     "uuid": "^9.0.0"
   }
 }
