add js embedded build feature

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,5 +82,6 @@
         "xutility": "cpp",
         "array": "cpp",
         "semaphore": "cpp"
-    }
+    },
+    "liveServer.settings.port": 5501
 }
