--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@datastructures-js/queue": "^4.2.3",
     "fs-extra": "^11.1.1",
+    "uglify-js": "^3.17.4",
     "uuid": "^9.0.0"
   }
 }
