--- a/package.json
+++ b/package.json
@@ -17,9 +17,8 @@
   },
   "homepage": "https://github.com/n-c0d3r/n0d3s#readme",
   "dependencies": {
-    "@datastructures-js/queue": "^4.2.3",
     "fs-extra": "^11.1.1",
-    "uglify-js": "^3.17.4",
+    "terser": "^5.24.0",
     "uuid": "^9.0.0"
   }
 }
